<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="instructionsText">Επιλέξτε αριθμό\nπαικτών και\nτραγούδι...</string>
	<string name="app_name">Boof</string>
	<string name="boof">Μπουφ!</string>
	<string name="instructions">Οδηγίες</string>
	<string name="info">Πληροφορίες</string>
	<string name="donate">Δωρεά</string>
	<string name="credits">Μνεία</string>
	<string name="preferences">Ρυθμίσεις</string>
	<string name="version">0.4</string>
	<string name="description">TODO: write a description</string>
	<string name="copyright">Copyright (c) 2011 Βασιλάκος Γεώργιος</string>
	<string name="contact">Επικοινωνία :</string>
	<string name="site">http://linuxteam.cs.teilar.gr/~forfolias/boof/
	</string>
	<string name="back">Επιστροφή</string>
	<string name="licence">Άδεια χρήσης</string>
	<string name="licenceText">
		This program is free software: you can redistribute
		it and/or modify it
		under the terms of the GNU General Public License
		as published by the
		Free Software Foundation, either version 3 of the
		License, or (at your
		option) any later version. This program is
		distributed in the hope
		that it will be useful, but WITHOUT ANY
		WARRANTY; without even the
		implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License
		for more details. You
		should have received a copy of the GNU General
		Public License along
		with this program. If not, see
		http://www.gnu.org/licenses/
	</string>
	<string name="idea">Ιδέα</string>
	<string name="developer">Βασιλάκος Γεώργιος</string>
	<string name="programming">Προγραμματισμός</string>
	<string name="graphicDesign">Γραφικά</string>
	<string name="voices">Φωνητικά</string>
	<string name="voice1">Φωνη 1</string>
	<string name="voice2">Φωνη 2</string>
	<string name="betaTesters">Δοκιμαστικός έλεγχος</string>
	<string name="betaTester1">Ράνια Μάρου</string>
	

	<string name="instructionsActivityText"> • όλοι οι παίκτες σχηματίστε έναν κύκλο.\n\n •
		τοποθετήστε τη συσκευή στο κέντρο του κύκλου.\n\n • επιλέξτε τον
		αριθμό των παικτών και το τραγούδι που θέλετε να ακουστεί\n\n •
		πατήστε “Μπούφ!”
	</string>

	<string name="ok">Εφαρμογή</string>
	<string name="cancel">Ακύρωση</string>

	<string name="noSelectedSong">Δεν έχετε επιλέξει κάποιο τραγούδι για αναπαραγωγή!
	</string>
	<string name="scrollToSelectSong">Σύρετε για να επιλέξετε τραγούδι!\nΚρατήστε
		πατημένο για προεπισκόπιση του τραγουδιού!
	</string>
	<string name="stopPreview">Κρατήστε ξανά πατημένο για διακοπή της
		προεπισκόπισης
	</string>


	<string name="noOfBoofs">Έχετε κάνει </string>
	<string name="sounds">Ήχοι</string>
	<string name="soundEffects">Ηχητικά εφέ</string>
	<string name="soundEffectsSummary">Ενεργοποίηση ηχητικών εφέ στο πάτημα κουμπιών
	</string>
	<string name="music">Μουσική</string>
	<string name="musicSummary">Ενεργοποίηση μουσικής στην αρχική οθόνη</string>
	<string name="colors">Χρώματα</string>
	<string name="bgColor">Χρώμα παρασκηνίου</string>
	<string name="bgColorSummary">Αγγίξτε για να επιλέξετε το χρώμα παρασκηνίου
	</string>
	<string name="textColor">Χρώμα κειμένου</string>
	<string name="textColorSummary">Αγγίξτε για να επιλέξετε το χρώμα κειμένου
	</string>
	<string name="generic">Γενικά</string>
	<string name="clockwise">Δεξιόστροφα</string>
	<string name="counterclockwise">Αριστερόστροφα</string>
	<string name="cycleDirection">Κατεύθυνση περιστροφής</string>
	<string name="cycleDirectionSummary">Αλλάξτε την κατεύθυνση περιστροφής του κύκλου
	</string>
	<string name="randomPlayerStart">Τυχαία εκκίνηση</string>
	<string name="randomPlayerStartSummary">Εκκίνηση κύκλου απο τυχαία θέση</string>
	<string name="randomSongSselect">Τυχαίο τραγούδι</string>
	<string name="randomSongSselectSummary">Επιλογή τυχαίου τραγουδιού στην αρχική οθόνη
	</string>
	<string name="previewSeconds">Διάρκεια προεπισκόπισης</string>
	<string name="previewSecondsSummary">Διάρκεια προεπισκόπισης τραγουδιού σε δευτερόλεπτα
	</string>
	<string name="seconds1">1 δευτερόλεπτο</string>
	<string name="seconds3">3 δευτερόλεπτα</string>
	<string name="seconds5">5 δευτερόλεπτα</string>
	<string name="seconds7">7 δευτερόλεπτα</string>
	<string name="secondsFull">Ολόκληρο</string>
	


	<string name="playersColors">Χρώματα παικτών</string>
	<string name="playersColorsSummary">Αγγίξτε για να επιλέξετε τα χρώματα των παικτών
	</string>

	<string name="p1ColorText">Χρώμα 1ου παίκτη</string>
	<string name="p2ColorText">Χρώμα 2ου παίκτη</string>
	<string name="p3ColorText">Χρώμα 3ου παίκτη</string>
	<string name="p4ColorText">Χρώμα 4ου παίκτη</string>
	<string name="p5ColorText">Χρώμα 5ου παίκτη</string>
	<string name="p6ColorText">Χρώμα 6ου παίκτη</string>
	<string name="p7ColorText">Χρώμα 7ου παίκτη</string>
	<string name="p8ColorText">Χρώμα 8ου παίκτη</string>
	<string name="p9ColorText">Χρώμα 9ου παίκτη</string>

	<string name="pColorSummary">Αγγίξτε για να επιλέξετε το χρώμα του παίκτη
	</string>
</resources>
