<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res/com.vasilakos.boof">
	<PreferenceCategory android:title="@string/sounds">
		<CheckBoxPreference
			android:title="@string/soundEffects"
			android:defaultValue="true"
			android:summary="@string/soundEffectsSummary"
			android:key="soundEffects" />
		<CheckBoxPreference
			android:title="@string/music"
			android:defaultValue="true"
			android:summary="@string/musicSummary"
			android:key="music" />
		<ListPreference
			android:key="previewDuration"
			android:title="@string/previewSeconds"
			android:summary="@string/previewSecondsSummary"
			android:defaultValue="3000"
			android:entries="@array/previewText"
			android:entryValues="@array/previewValues" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/colors">
		<com.vasilakos.boof.ColorPickerPreference
			android:key="bgColor"
			android:title="@string/bgColor"
			android:summary="@string/bgColorSummary"
			custom:defaultColor="0xff000000"
			custom:player="bgColor" />
		<com.vasilakos.boof.ColorPickerPreference
			android:key="textColor"
			android:title="@string/textColor"
			android:summary="@string/textColorSummary"
			custom:defaultColor="0xffffffff"
			custom:player="textColor" />
		<PreferenceScreen
			android:key="playersColors"
			android:title="@string/playersColors"
			android:summary="@string/playersColorsSummary">
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p1Color"
				android:title="@string/p1ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xffff0000"
				custom:player="p1Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p2Color"
				android:title="@string/p2ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xffffff00"
				custom:player="p2Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p3Color"
				android:title="@string/p3ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff0000ff"
				custom:player="p3Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p4Color"
				android:title="@string/p4ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff008000"
				custom:player="p4Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p5Color"
				android:title="@string/p5ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xffff00ff"
				custom:player="p5Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p6Color"
				android:title="@string/p6ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff00ff00"
				custom:player="p6Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p7Color"
				android:title="@string/p7ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff00ffff"
				custom:player="p7Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p8Color"
				android:title="@string/p8ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff800000"
				custom:player="p8Color" />
			<com.vasilakos.boof.ColorPickerPreference
				android:key="p9Color"
				android:title="@string/p9ColorText"
				android:summary="@string/pColorSummary"
				custom:defaultColor="0xff800080"
				custom:player="p9Color" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/generic">
		<ListPreference
			android:key="cycleDirection"
			android:title="@string/cycleDirection"
			android:summary="@string/cycleDirectionSummary"
			android:defaultValue="1"
			android:entries="@array/directionText"
			android:entryValues="@array/directionValues" />
		<CheckBoxPreference
			android:title="@string/randomPlayerStart"
			android:defaultValue="true"
			android:summary="@string/randomPlayerStartSummary"
			android:key="randomPlayer" />
		<CheckBoxPreference
			android:title="@string/randomSongSselect"
			android:defaultValue="true"
			android:summary="@string/randomSongSselectSummary"
			android:key="randomSong" />
	</PreferenceCategory>
</PreferenceScreen>
