<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dp"
	android:id="@+id/creditsView"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView
			android:text="@string/idea"
			android:textStyle="bold"
			android:layout_marginTop="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/developer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<TextView
			android:text="@string/programming"
			android:textStyle="bold"
			android:layout_marginTop="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/developer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<TextView
			android:text="@string/graphicDesign"
			android:textStyle="bold"
			android:layout_marginTop="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/developer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<TextView
			android:text="@string/voices"
			android:textStyle="bold"
			android:layout_marginTop="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/voice1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/voice2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<TextView
			android:text="@string/betaTesters"
			android:textStyle="bold"
			android:layout_marginTop="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView
			android:text="@string/betaTester1"
			android:layout_marginBottom="30dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>
</ScrollView>
