<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/detailsScrollView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_horizontal">
		<ImageView
			android:id="@+id/infoImage"
			android:src="@drawable/boof"
			android:layout_margin="4dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal">
			<TextView
				android:text="@string/app_name"
				android:textSize="15sp"
				android:layout_margin="5dip"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:text="@string/version"
				android:layout_margin="5dip"
				android:textStyle="italic"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<TextView
			android:text="@string/description"
			android:gravity="center_horizontal"
			android:layout_margin="5dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:text="@string/copyright"
			android:layout_margin="4dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:text="@string/contact"
			android:id="@+id/contact"
			android:layout_margin="2dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:text="@string/site"
			android:layout_margin="2dip"
			android:id="@+id/site"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>